--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
 	repositories {
+		mavenLocal()
+		maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+		maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
 		maven { url "https://repo.spring.io/plugins-release" }
 	}
 	dependencies {
@@ -74,6 +77,9 @@ configure(allprojects) { project ->
 	}
 
 	repositories {
+		mavenLocal()
+		maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+		maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
 		maven { url "https://repo.spring.io/libs-release" }
 	}
 
